Automated cleanup
--
MOS_MIGRATED_REVID=135816105